Overlapping with sidebar fixed

--- a/src/styles/contactme.css
+++ b/src/styles/contactme.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: left;
   color: white;
+  width: 100%;
 }
 
 .contactMeDiv {
