--- a/src/styles/myskills.css
+++ b/src/styles/myskills.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: left;
+  width: 100%;
 }
 
 .mySkillsDiv {
